change MemoryRepository (load paths from application.properties) / lombok changes in Users and Tasks / add command to MenuCommands